# habit_tracker

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  requirements.txt  telegram_bot.py
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: apps.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  test_webhook.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_owner_alter_habit_user.py  0004_alter_habit_owner_alter_habit_user.py  0005_alter_habit_time.py  0006_alter_habit_related_habit.py  0007_alter_habit_options.py  0008_alter_habit_options.py
nginx/: nginx.conf
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py  0003_remove_user_username.py
