[tool.poetry]
name = "project-5-habit-tracker"
version = "0.1.0"
description = ""
authors = ["Nikolay Korkushko <Kakashonochka12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
celery = "^5.5.3"
django = "^5.2.6"
telebot = "^0.0.5"
urllib3 = "^2.5.0"
sqlparse = "^0.5.3"
pillow = "^11.3.0"
psycopg2 = "^2.9.10"
requests = "^2.32.5"
redis = "^6.4.0"
djangorestframework = "^3.16.1"
django-celery-beat = "^2.8.1"
drf-yasg = "^1.21.10"
python-dotenv = "^1.1.1"
djangorestframework-simplejwt = "^5.5.1"
django-location-field = "^2.7.3"
responses = "^0.25.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
isort = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
coverage = "^7.10.6"
pytest-django = "^4.11.1"
